folder structure for logfiles

--- a/tex/final.tex
+++ b/tex/final.tex
@@ -22,7 +22,8 @@
 \fi
 \hyphenation{op-tical net-works semi-conduc-tor}
 \begin{document}
-\title{Fine Tuning Video Classification using Artificial Neural Networks}
+%\title{Fine Tuning Video Classification using Artificial Neural Networks}
+\title{A Temporal CNN Model for Video Classification}
 \author{\IEEEauthorblockN{Casey Battaglino\IEEEauthorrefmark{1},
 Min-Hung Chen\IEEEauthorrefmark{2},
 Chih-Yao Ma\IEEEauthorrefmark{3} and 
