--- a/tex/final.tex
+++ b/tex/final.tex
@@ -24,17 +24,17 @@
 \begin{document}
 %\title{Fine Tuning Video Classification using Artificial Neural Networks}
 \title{A Temporal CNN Model for Video Classification}
-\author{\IEEEauthorblockN{Casey Battaglino\IEEEauthorrefmark{1},
+\author{\IEEEauthorblockN{Chih-Yao Ma\IEEEauthorrefmark{1},
 Min-Hung Chen\IEEEauthorrefmark{2},
-Chih-Yao Ma\IEEEauthorrefmark{3} and 
-Hao Yan\IEEEauthorrefmark{3}}
+Hao Yan\IEEEauthorrefmark{3} and
+Casey Battaglino\IEEEauthorrefmark{3}}
 \IEEEauthorblockA{
 Georgia Institute of Technology\\
 Atlanta, GA 30332--0250\\
-Email: \IEEEauthorrefmark{1}cbattaglino3@gatech.edu,
+Email: \IEEEauthorrefmark{1}cyma@gatech.edu,
 \IEEEauthorrefmark{2}cmhungsteve@gatech.edu,
-\IEEEauthorrefmark{3}cyma@gatech.edu,
-\IEEEauthorrefmark{4}yanhao@gatech.edu}}
+\IEEEauthorrefmark{3}yanhao@gatech.edu,
+\IEEEauthorrefmark{4}cbattaglino3@gatech.edu}}
 \maketitle
 \begin{abstract}
 Compared to static images, video data contain a wealth of temporal information.
