--- a/tex/2-00-final.tex
+++ b/tex/2-00-final.tex
@@ -1,15 +1,15 @@
 \section{Introduction}
 Deep convolutional neural networks are currently the leading technique for image classification; 
-convolutional layers capture patterns in spatial locality, while deep topologies capture the compositional nature of images.
-The problem of \emph{video} classification introduces a new, temporal dimension that may be necessary to holistically analyze in order to perform proper classification. For instance, a video of a human subject may contain temporal concepts such as gestures or gait that cannot be extracted from a static image. This prompts the question:
- how can we best capture the additional information contained within the temporal dimension?   
+convolutional layers capture patterns in spatial locality, while deep topologies can capture the compositional nature of images.
+The problem of \emph{video} classification introduces a new, temporal dimension is not leveraged by standard 2D CNNs. For instance, a video of a human subject may contain temporal concepts such as gestures or gait that cannot be extracted from a single frame. This prompts the question:
+ how can we best capture the additional information contained within this temporal dimension?   
 
 There are indeed methods of preprocessing temporal information into a single 2-dimensional input~\cite{brox}, but a more attractive research goal is to develop a neural network that can discover temporal relationships on its own.
 There are multiple recent approaches towards this goal, but as of yet no consensus on which is superior.
 
-The difficulties in training neural networks on video input include the following: memory requirements (particularly if 3D convolutions are used), fewer public data sets, size of the data sets (for instance, the Sports-1M data set is $\approx 4TB$ large), and lack of consensus on which structural approaches are most effective.
+The difficulties in training neural networks on video input include the following: memory requirements (particularly if 3D convolutions are used), fewer public data sets, size of the data sets (for instance, the Sports-1M data set is $\approx 4TB$ large), and a lack of consensus on which structural approaches are most effective.
 
-In just the last two years, a variety of techniques have been investigated, including 3-dimensional convolutional neural networks (3D-CNN), and Long Short-Term Memory (LSTM). Additional techniques have been appended to these strategies, such as slow-fusion, optical-flow, and retraining of pre-trained ImageNet networks.
+In just the last two years, a variety of techniques have been investigated, including 3-dimensional convolutional neural networks (3D-CNN) and Long Short-Term Memory (LSTM). Additional techniques have been incorporated within these strategies, such as slow-fusion, optical-flow, and retraining of pre-trained ImageNet networks.
 
 The purpose of this project is to examine and compare these approaches, while comparing to an additional, novel technique that we introduce that uses a CNN to extract temporal information from sequentially-generated ImageNet vectors. 
 
@@ -17,7 +17,7 @@ We make the following contributions:
 \begin{enumerate}
 \item Implement and analyze a 2D-CNN $\to$ LSTM architecture for video classification.
 \item Introduce and analyze a novel 2D-CNN $\to$ 2D-CNN architecture for video classification. 
-\item Analyze the effect of replacing the first CNN with other ImageNet architectures than in previous implementations.
+\item Investigate the effect of replacing the first CNN with novel ImageNet architectures.
 \end{enumerate}
 
 \section{Background}
@@ -36,7 +36,6 @@ Describe LSTM applied to feature vectors~\cite{}
 
 \subsection{Related Work}
 %What has been done in similar fields/problems? What are the limitations of current approaches?
-
 %Recurrent long-term convolutional models are most frequently used in speech and language applications, but it is possible to apply them to visual time-series data. 
 One popular approach is to apply a 2D-CNN to each frame of the video, followed by an RNN with LSTM~\cite{ltrcn}. 
 Another approach is slow-fusion, which applies multiple frames to the input at the same time~\cite{cnnvid}. This approach, applied to a simply CNN, shows only a modest improvement over CNN single-frame learning.
@@ -52,15 +51,31 @@ the third, temporal dimension in different ways: Convolutional Neural
 Networks (3D-CNNs or CNN as temporal encoder)~\cite{stf,cnnvid,cnnMNLS} and Long
 Short-Term Memory /Recurrent Neural Networks (Regular or Multi-dimensional LSTM)~\cite{ltrcn}. 
 
+\subsection{Baseline}
+Our baseline model applies a standard pretrained ImageNet CNN to each of the input frames. A simple averaging process is used on the set of output vectors to produce a predicted class-- essentially implementing a vote. This is shown in~\reffig{fig:cnn}. 
+\begin{figure}
+  \centering
+  \includegraphics[width=1.0\linewidth]{figs/cnn}
+  \caption{Static CNN Network}
+  \label{fig:cnn}
+\end{figure}
+
 \subsection{3D CNN}
 % 3D-CNNs
 Using a 3D Convolutional Neural Network, it is possible to build a classifier on a moving window
 of frames using 3D convolutions to extract useful local movement information. However, 3D-CNNs introduce a massive memory blowup that may make training infeasible on GPUs.
-To address this, we would like to use the slow-fusion model~\cite{cnnvid} instead of 3D kernels. In addition, we also plan to apply 3D kernels to one or two layers to check the improvement if we don't meet the memory problem. On the other hand, an LSTM/RNN approach is able to build the classifier with long term memory using a much larger number of frames at once. Combining a slow-fusion CNN with LSTM would combine the local movement information with long-term memory, with possible gains in learning.
+To address this, we would like to use the slow-fusion model~\cite{cnnvid} instead of 3D kernels. In addition, we also plan to apply 3D kernels to one or two layers to check the improvement if we don't meet the memory problem.
 
 
 % LSTM
 \subsection{RNN-LSTM}
+An LSTM/RNN approach is able to build the classifier with long term memory using a much larger number of frames at once. Combining a slow-fusion CNN with LSTM would combine the local movement information with long-term memory, with possible gains in learning. This approach is illustrated in~\reffig{fig:lcrn}.
+\begin{figure}
+  \centering
+  \includegraphics[width=1.0\linewidth]{figs/lcrn}
+  \caption{LRCN Network}
+  \label{fig:lcrn}
+\end{figure}
 Furthermore, the current LSTM model is built on the fully-connected
 layer, which does not conserve spatial information. We would like to examine the 
 effectiveness of adding the LSTM network at earlier layers.
@@ -72,7 +87,13 @@ information following an early convolution layer.
 
 \subsection{Temporal CNN}
 % CNN + CNN (1D convolution) ==> Yan
-Other than the LSTM model for the temporal encoder, convolutional architecture(CNN) has also been applied to model sentences using a pre-trained embedding of words ~\cite{cnnSC,cnnMNLS}. We would like to implement this idea into the video classification. First, a pre-trained CNN architecture can be applied as spatial encoder to each frame to extract features. Furthermore, 1D or 2D CNN can be applied as the temporal encoder. For 1D CNN, we take 1D convolution on a sliding window of the concatenated feature vectors from the spatial decoder. For 2D CNN, we apply 2D convolution and 2D max-pooling directly on the a sliding window of the feature matrix from the spatial encoder. 
+Other than the LSTM model for the temporal encoder, convolutional architecture(CNN) has also been applied to model sentences using a pre-trained embedding of words ~\cite{cnnSC,cnnMNLS}. We would like to implement this idea into the video classification. First, a pre-trained CNN architecture can be applied as spatial encoder to each frame to extract features. Furthermore, 1D or 2D CNN can be applied as the temporal encoder. For 1D CNN, we take 1D convolution on a sliding window of the concatenated feature vectors from the spatial decoder. For 2D CNN, we apply 2D convolution and 2D max-pooling directly on the a sliding window of the feature matrix from the spatial encoder. This approach is illustrated in~\reffig{fig:tnn}.
+\begin{figure}
+  \centering
+  \includegraphics[width=1.0\linewidth]{figs/tnn}
+  \caption{Temporal CNN Network}
+  \label{fig:tnn}
+\end{figure}
 
 \section{Experiments}
 \subsection{Data Set}
@@ -94,15 +115,15 @@ The following is a set of proposed experiments, some of which we have started:
 
 \subsection{Results}
 \begin{table}[h!]
- \caption{Best test results for a given train-test split of UCF101~\cite{ucf101}}
+ \caption{Best test results for a given train-test split of UCF101~\cite{ucf101}, with our results followed by results from the literature.}
 \centering
- \begin{tabular}{||l r||}
+ \begin{tabular}{||l l||}
  \hline
  CNN (ResNet) & 74.97\% \\
- CNN-LSTM (ResNet) & 79.39\% \\
- TCNN (Res2L) & 75.1\% \\
+ CNN-LSTM (ResNet) & \textbf{79.39\%} \\
+ TCNN (Res2L) & 75.1\% \\ \hline
  LRCN~\cite{byeon2015scene} & 71.12\% \\
- C3D~\cite{stf} & 85.2\% \\
+ C3D~\cite{stf} & \textbf{85.2\%} \\
  SlowFusion~\cite{cnnvid} & 65.4\%\\ [0.5ex]
  \hline
  \end{tabular}
