--- a/tex/2-00-final.tex
+++ b/tex/2-00-final.tex
@@ -21,8 +21,6 @@ We make the following contributions:
 \end{enumerate}
 
 \section{Background}
-Insert background here.
-%Summarize and cite
 
 Describe LSTM~\cite{lstm}.
 
@@ -166,6 +164,6 @@ The testing results for our novel TCNN method are presented in~\RefFigure{fig:tn
 \section{Conclusion}
 Perhaps the most noticeable result is that the quality of the first convolutional layer is very important. We were able to see excellent improvements in quality just by using ResNet in place of earlier ImageNet models. While we used a standard pretrained ImageNet model for this layer, we might expect improvements of 5-10\% by further training this first layer on relevant video classes. 
 
-Data volume is very important. We had 10000 videos in our data set, but C3D was able to train on one million videos, as well as a proprietary Facebook data set.
+Data volume is very important. We had 10000 videos in our data set, but C3D was able to train on one million videos, as well as a proprietary Facebook data set. In earlier work, Karpathy, et al. demonstrated that additional training on the Sports-1M data-set raised their testing accuracy on UCF-101 from 41.3\% to 65.4\%~\cite{cnnvid}, so we would expect large gains from training on a larger data set as well.
 
 The temporal CNN was not as effective as the LSTM model, and in fact only performed incrementally better than the raw CNN model. Performing convolutions across feature vectors is tricky. 
