--- a/tex/2-00-final.tex
+++ b/tex/2-00-final.tex
@@ -21,10 +21,13 @@ We make the following contributions:
 \end{enumerate}
 
 \section{Background}
+While neural networks were once limited to small, toy applications, 
+their power has increased dramatically due to the explosion in data 
+due to social media and the rise in computational power due to GPUs. 
+The ImageNet data set~\cite{imagenet} has become a standard image-classification benchmark, with improvements each year from architectural tweaks~\cite{alexnet,vggnet,nin,resnet}.
 
+With video input we must process a collection of frames. 
 Describe LSTM~\cite{lstm}.
-
-Describe ImageNet (Citation for VGG-net~\cite{vggnet} and ResNet~\cite{resnet})
 
 Describe Slow Fusion~\cite{cnnvid}
 
