--- a/tex/bib.bib
+++ b/tex/bib.bib
@@ -76,6 +76,21 @@ month={June},}
   url          = "http://lmb.informatik.uni-freiburg.de//Publications/2011/Bro11a"
 }
 
+@inproceedings{imagenet,
+        AUTHOR = {Deng, J. and Dong, W. and Socher, R. and Li, L.-J. and Li, K. and Fei-Fei, L.},
+        TITLE = {{ImageNet: A Large-Scale Hierarchical Image Database}},
+        BOOKTITLE = {CVPR09},
+        YEAR = {2009},
+        BIBSOURCE = "http://www.image-net.org/papers/imagenet_cvpr09.bib"}
+
+@INPROCEEDINGS{alexnet,
+    author = {Alex Krizhevsky and Ilya Sutskever and Geoffrey E. Hinton},
+    title = {Imagenet classification with deep convolutional neural networks},
+    booktitle = {Advances in Neural Information Processing Systems},
+    year = {},
+    pages = {2012}
+}
+
 @article{nin,
   author    = {Min Lin and
                Qiang Chen and
