--- a/tex/final.tex
+++ b/tex/final.tex
@@ -16,6 +16,7 @@
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{corollary}[theorem]{Corollary}
 \usepackage{booktabs}
+\usepackage{cite}
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ifCLASSINFOpdf
 \else
